[package]
name = "playdate"
version = "0.1.6"
readme = "README.md"
description = "High-level Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
ctrl = { workspace = true, default-features = false }
display = { workspace = true, default-features = false }
fs = { workspace = true, default-features = false }
gfx = { workspace = true, default-features = false }
menu = { workspace = true, default-features = false }
sound = { workspace = true, default-features = false }
sprite = { workspace = true, default-features = false }
system = { workspace = true, default-features = false }
sys = { workspace = true, default-features = false }


[features]
default = [
	"sys/default",
	"sys/lang-items",
	"ctrl/default",
	"display/default",
	"fs/default",
	"gfx/default",
	"menu/default",
	"sound/default",
	"sprite/default",
	"system/default",
	"entry-point",
]

lang-items = ["sys/lang-items"]
allocator = ["sys/allocator"]
panic-handler = ["sys/panic-handler"]
eh-personality = ["sys/eh-personality"]
entry-point = ["sys/entry-point"]
error-ctx = ["sys/error-ctx"]

# playdate-sys features, bindings build configuration:

bindgen-runtime = [
	"sys/bindgen-runtime",
	"ctrl/bindgen-runtime",
	"display/bindgen-runtime",
	"fs/bindgen-runtime",
	"gfx/bindgen-runtime",
	"menu/bindgen-runtime",
	"sound/bindgen-runtime",
	"sprite/bindgen-runtime",
	"system/bindgen-runtime",
]
bindgen-static = [
	"sys/bindgen-static",
	"ctrl/bindgen-static",
	"display/bindgen-static",
	"fs/bindgen-static",
	"gfx/bindgen-static",
	"menu/bindgen-static",
	"sound/bindgen-static",
	"sprite/bindgen-static",
	"system/bindgen-static",
]
bindings-derive-default = ["sys/bindings-derive-default"]
bindings-derive-eq = ["sys/bindings-derive-eq"]
bindings-derive-copy = ["sys/bindings-derive-copy"]
bindings-derive-debug = [
	"sys/bindings-derive-debug",
	"ctrl/bindings-derive-debug",
	"display/bindings-derive-debug",
	"fs/bindings-derive-debug",
	"gfx/bindings-derive-debug",
	"menu/bindings-derive-debug",
	"sound/bindings-derive-debug",
	"sprite/bindings-derive-debug",
	"system/bindings-derive-debug",
]
bindings-derive-hash = ["sys/bindings-derive-hash"]
bindings-derive-ord = ["sys/bindings-derive-ord"]
bindings-derive-partialeq = ["sys/bindings-derive-partialeq"]
bindings-derive-partialord = ["sys/bindings-derive-partialord"]
bindings-derive-constparamty = ["sys/bindings-derive-constparamty"]
bindings-documentation = ["sys/bindings-documentation"]


[[example]]
name = "hello-world"
crate-type = ["dylib", "staticlib"]
path = "examples/hello-world.rs"
required-features = ["entry-point", "lang-items"]

[[example]]
name = "video"
crate-type = ["dylib", "staticlib"]
path = "examples/video.rs"
required-features = ["entry-point", "lang-items"]

[package.metadata.playdate]
bundle-id = "rs.playdate.core"

[package.metadata.playdate.dev-assets]
"examples/ferris.png" = true
"examples/" = "${PLAYDATE_SDK_PATH}/Examples/Level 1-1/Source/sfx/main_theme.wav"
"examples/video.pdv" = "${PLAYDATE_SDK_PATH}/Disk/System/Setup.pdx/videos/outro.pdv"


[package.metadata.docs.rs]
all-features = false
features = [
	"sys/bindings-derive-default",
	"sys/bindings-derive-eq",
	"sys/bindings-derive-copy",
	"bindings-derive-debug",
	"sys/bindings-derive-hash",
	"sys/bindings-derive-ord",
	"sys/bindings-derive-partialeq",
	"sys/bindings-derive-partialord",
]
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = [
	"-Zunstable-options",
	"-Zrustdoc-scrape-examples",
	"-Zbuild-std=core,alloc",
]
