[package]
name = "playdate"
version = "0.2.6"
readme = "README.md"
description = "High-level Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
ctrl = { workspace = true, default-features = false }
display = { workspace = true, default-features = false }
fs = { workspace = true, default-features = false }
gfx = { workspace = true, default-features = false }
lua = { workspace = true, default-features = false }
menu = { workspace = true, default-features = false }
scoreboards = { workspace = true, default-features = false }
sound = { workspace = true, default-features = false }
sprite = { workspace = true, default-features = false }
system = { workspace = true, default-features = false }
sys = { workspace = true, default-features = false }


[features]
default = ["entry-point", "sys/lang-items"]
allocator = ["sys/allocator"]
panic-handler = ["sys/panic-handler"]
entry-point = ["sys/entry-point"]
# eh-personality = ["sys/eh-personality"]


[[example]]
name = "hello-world"
crate-type = ["dylib", "staticlib"]
path = "examples/hello-world.rs"
required-features = ["entry-point", "allocator", "panic-handler"]

[[example]]
name = "video"
crate-type = ["dylib", "staticlib"]
path = "examples/video.rs"
required-features = ["entry-point", "allocator", "panic-handler"]

[package.metadata.playdate]
bundle-id = "rs.playdate.core"

[package.metadata.playdate.dev-assets]
"examples/ferris.png" = true
"examples/" = "${PLAYDATE_SDK_PATH}/Examples/Level 1-1/Source/sfx/main_theme.wav"
"examples/video.pdv" = "${PLAYDATE_SDK_PATH}/Disk/System/Setup.pdx/videos/outro.pdv"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
