[package]
name = "playdate-sound"
version = "0.2.1"
readme = "README.md"
description = "High-level sound API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "multimedia::audio", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = ["sys/default"]
# sys- features:
lang-items = ["sys/lang-items", "fs/lang-items"]
allocator = ["sys/allocator", "fs/allocator"]
panic-handler = ["sys/panic-handler", "fs/panic-handler"]
eh-personality = ["sys/eh-personality", "fs/eh-personality"]
entry-point = ["sys/entry-point"]
error-ctx = ["sys/error-ctx", "fs/error-ctx"]
bindgen-runtime = ["sys/bindgen-runtime", "fs/bindgen-runtime"]
bindgen-static = ["sys/bindgen-static", "fs/bindgen-static"]
bindings-derive-default = [
	"sys/bindings-derive-default",
	"fs/bindings-derive-default",
]
bindings-derive-eq = ["sys/bindings-derive-eq", "fs/bindings-derive-eq"]
bindings-derive-copy = ["sys/bindings-derive-copy", "fs/bindings-derive-copy"]
bindings-derive-debug = [
	"sys/bindings-derive-debug",
	"fs/bindings-derive-debug",
]
bindings-derive-hash = ["sys/bindings-derive-hash", "fs/bindings-derive-hash"]
bindings-derive-ord = ["sys/bindings-derive-ord", "fs/bindings-derive-ord"]
bindings-derive-partialeq = [
	"sys/bindings-derive-partialeq",
	"fs/bindings-derive-partialeq",
]
bindings-derive-partialord = [
	"sys/bindings-derive-partialord",
	"fs/bindings-derive-partialord",
]
bindings-derive-constparamty = [
	"sys/bindings-derive-constparamty",
	"fs/bindings-derive-constparamty",
]
bindings-documentation = [
	"sys/bindings-documentation",
	"fs/bindings-documentation",
]


[dependencies]
sys = { workspace = true, default-features = false }
fs = { workspace = true, default-features = false }

[dev-dependencies]
gfx = { workspace = true, default-features = false }
system = { workspace = true, default-features = false , features = ["try-trait-v2"] }

[[example]]
name = "sp"
crate-type = ["dylib", "staticlib"]
path = "examples/sp-simple.rs"
required-features = ["entry-point"]

[[example]]
name = "fp"
crate-type = ["dylib", "staticlib"]
path = "examples/fp-simple.rs"


[package.metadata.playdate]
bundle-id = "rs.playdate.sound"

[package.metadata.playdate.dev-assets]
"sfx/" = "${PLAYDATE_SDK_PATH}/Examples/Level 1-1/Source/sfx/main_theme.wav"


[package.metadata.docs.rs]
all-features = false
features = [
	"bindings-derive-default",
	"bindings-derive-eq",
	"bindings-derive-copy",
	"bindings-derive-debug",
	"bindings-derive-hash",
	"bindings-derive-ord",
	"bindings-derive-partialeq",
	"bindings-derive-partialord",
]
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = [
	"-Zunstable-options",
	"-Zrustdoc-scrape-examples",
	"-Zbuild-std=core,alloc",
]
