[package]
name = "playdate-sound"
version = "0.4.5"
readme = "README.md"
description = "High-level sound API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "multimedia::audio", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
sys = { workspace = true, default-features = false }
fs = { workspace = true, default-features = false }

[dev-dependencies]
gfx = { workspace = true, default-features = false }
system = { workspace = true, default-features = false, features = ["try-trait-v2"] }

[[example]]
name = "sp"
crate-type = ["dylib", "staticlib"]
path = "examples/sp-simple.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[[example]]
name = "fp"
crate-type = ["dylib", "staticlib"]
path = "examples/fp-simple.rs"
required-features = ["sys/lang-items", "sys/entry-point"]


[package.metadata.playdate]
bundle-id = "rs.playdate.sound"

[package.metadata.playdate.dev-assets]
"sfx/" = "${PLAYDATE_SDK_PATH}/Examples/Level 1-1/Source/sfx/main_theme.wav"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
