[package]
name = "playdate-sprite"
version = "0.3.3"
readme = "README.md"
description = "High-level sprite API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "rendering::graphics-api", "graphics", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
sys = { workspace = true, default-features = false }
gfx = { workspace = true, default-features = false }

[dev-dependencies]
display = { workspace = true, default-features = false }
system = { workspace = true, default-features = false }


[[example]]
name = "simple"
crate-type = ["dylib", "staticlib"]
path = "examples/simple.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[[example]]
name = "handler"
crate-type = ["dylib", "staticlib"]
path = "examples/handler.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[package.metadata.playdate]
bundle-id = "rs.playdate.sprite"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
