[package]
name = "playdate-system"
version = "0.3.16"
readme = "README.md"
description = "High-level System API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


# [features]
# try-trait-v2 = [] # impl `FromResidual` for `UpdateCtrl` # TODO: remove `try-trait-v2` feature


[dependencies.sys]
workspace = true
default-features = false


[[example]]
name = "handler-boxed"
crate-type = ["dylib", "staticlib"]
path = "examples/handler-boxed.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "handler-static"
crate-type = ["dylib", "staticlib"]
path = "examples/handler-static.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "handler-pinned"
crate-type = ["dylib", "staticlib"]
path = "examples/handler-pinned.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "set-serial-message-callback"
crate-type = ["dylib", "staticlib"]
path = "examples/set-serial-message-callback.rs"

[[example]]
name = "update-state-in-serial-message-callback"
crate-type = ["dylib", "staticlib"]
path = "examples/update-state-in-serial-message-callback.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[package.metadata.playdate]
bundle-id = "rs.playdate.system"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
