[package]
name = "playdate-system"
version = "0.3.16"
readme = "README.md"
description = "High-level System API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies.sys]
workspace = true
features = ["alloc"]

[dependencies.callback]
workspace = true
features = ["sys"]

[dev-dependencies.display]
workspace = true


[[example]]
name = "update-callback"
crate-type = ["dylib", "staticlib"]
path = "examples/update-callback.rs"
required-features = ["sys/entry-point", "sys/lang-items"]


[[example]]
name = "server-time"
crate-type = ["dylib", "staticlib"]
path = "examples/server-time-callback.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

# temp, until make default no-gcc build and build via `cargo rustc`.
[[example]]
name = "server-time-bin"
crate-type = ["bin"]
path = "examples/server-time-callback.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "serial-message"
crate-type = ["dylib", "staticlib"]
path = "examples/serial-message-callback.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "buttons"
crate-type = ["dylib", "staticlib"]
path = "examples/buttons-callback.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "accelerometer"
crate-type = ["dylib", "staticlib"]
path = "examples/accelerometer.rs"
required-features = ["sys/entry-point", "sys/lang-items"]

[[example]]
name = "launch-args"
crate-type = ["dylib", "staticlib"]
path = "examples/launch-args.rs"
required-features = ["sys/entry-point", "sys/lang-items"]


[package.metadata.playdate]
bundle-id = "rs.playdate.system"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]


[lints.rust.unexpected_cfgs]
level = "deny"
